k8s-configuration/NEG/neg-demo/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: neg-demo-svc
  annotations:
    alpha.cloud.google.com/load-balancer-neg: "true"
spec:
  selector:
    run: neg-demo-app
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9376
