k8s-configuration/NEG/neg-demo/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: neg-demo-ing
spec:
  backend:
    serviceName: neg-demo-app
    servicePort: 80
